# MAIC

./: .gitignore
apple_native/: Package.swift  README.md
apple_native/docs/: PERSONALIZED_ANOMALY_DETECTION.md  SETUP.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/api/v1/: auth.py  emergency.py  health.py  medications.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: client.py
backend/app/models/: base.py  health.py  medication.py  user.py
backend/app/services/: demo_seed.py  drug_agent.py  emergency_service.py  notification_service.py  ocr_service.py  rate_limiter.py  reminder_scheduler.py
backend/scripts/: debug_openfda.py  seed_demo_data.py  test_drug_pipeline.py
backend/supabase/: migration.sql
backend/tests/: conftest.py  test_app.py  test_auth.py  test_demo_seed.py  test_drug_agent.py  test_emergency.py  test_health.py  test_medications.py  test_models.py  test_notifications.py  test_ocr.py  test_rate_limiter.py  test_routes_additional.py  test_scheduler.py
frontend/: pubspec.yaml
frontend/ios/: INTEGRATION_CHECKLIST.md
frontend/ios/Runner/: AppDelegate.swift  Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/app/: app.dart  navigation_shell_scaffold.dart  router.dart
frontend/lib/apple_native/: apple_native_bridge.dart  apple_native_models.dart
frontend/lib/backend/: backend_api.dart  backend_models.dart  (+1 more)
shared/contracts/: APPLE_NATIVE_INTEGRATION.md  FRONTEND_INTEGRATION_HANDOFF.md  NATIVE_CHANNEL_API.md
(+37 files in other folders)
